force-app/main/default/objects/CEC_Agenda__c/CEC_Agenda__c.object-meta.xml
<CustomObject>
    <description>This is the child object of CEC meeting which holds the details about the agendas to be discussed in the CEC meeting.This object determines what a CEC meeting is all i.e Topic, Sub-topics,Presenters etc.</description>
    <label>Agenda Item</label>
    <nameField>
        <label>CEC Agenda Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEC Agenda</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>