force-app/main/default/objects/CEC_Agenda__c/fields/Agenda_ID__c.field-meta.xml
<CustomField>
    <fullName>Agenda_ID__c</fullName>
    <displayFormat>CEC-{0000}</displayFormat>
    <label>Agenda ID</label>
    <type>AutoNumber</type>
</CustomField>