force-app/main/default/objects/CEC_Agenda__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>507/508 - Group size up to 20</fullName>
            </value>
            <value>
                <fullName>308 - Group size up to 10</fullName>
            </value>
            <value>
                <fullName>16B.01 (Retail only) - Group size up to 9</fullName>
            </value>
            <value>
                <fullName>CEC1 - Group size up to 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>