force-app/main/default/objects/CEC_Agenda__c/fields/Time_End__c.field-meta.xml
<CustomField>
    <fullName>Time_End__c</fullName>
    <label>Time End</label>
    <type>Time</type>
</CustomField>