force-app/main/default/objects/CEC_Agenda__c/fields/Time_Start__c.field-meta.xml
<CustomField>
    <fullName>Time_Start__c</fullName>
    <label>Time Start</label>
    <type>Time</type>
</CustomField>